<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="itp341.zhao.glarence.a7.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/orderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_display"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_display"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <RadioGroup
            android:id="@+id/sizeButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/smallRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_title"/>

            <RadioButton
                android:id="@+id/mediumRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_title"/>

            <RadioButton
                android:id="@+id/largeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_title"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/brewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brew_display"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:id="@+id/brewSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/brew_type">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sugarDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_display"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <Switch
            android:id="@+id/sugarSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/milkCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk_title"
        android:layout_marginBottom="0dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/instrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instr_display"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/instrTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/loadFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_fav_button"/>

        <Button
            android:id="@+id/saveFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_fav_button"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button"/>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button"/>

    </LinearLayout>

</LinearLayout>
