<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sizeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sizePH"
            android:textSize="24dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/brewDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brewPH"
            android:textSize="24dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/milkDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milkPH"
            android:textSize="22dp"
            android:textStyle="italic"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/sugarDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugarPH"
            android:textSize="22dp"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/instrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrPH"
            android:textSize="18dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/instrDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/orderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderConfirm"
        android:textSize="18dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmButton"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelButton"/>

    </LinearLayout>

</LinearLayout>